test: add coverage for lambda entrypoint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
         "forceConsistentCasingInFileNames": true,
         "experimentalDecorators": true
     },
-    "exclude": ["node_modules", "**/*.test.ts"]
+    "exclude": ["node_modules"],
+    "include": ["app/**/*.ts", "**/*.test.ts"]
 }
