--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@aws-lambda-powertools/metrics": "^2.9.0",
         "@aws-lambda-powertools/tracer": "^2.9.0",
         "esbuild": "^0.14.54",
-        "mysql2": "^3.11.3"
+        "mysql2": "^3.11.3",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@jest/globals": "^29.2.0",
