--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "@aws-lambda-powertools/logger": "^2.9.0",
         "@aws-lambda-powertools/metrics": "^2.9.0",
         "@aws-lambda-powertools/tracer": "^2.9.0",
+        "@prisma/client": "^5.21.1",
         "esbuild": "^0.14.54",
         "mysql2": "^3.11.3",
+        "sequelize": "^6.37.5",
         "uuid": "^10.0.0"
     },
     "devDependencies": {
