--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "esbuild": "^0.14.54",
         "mysql2": "^3.11.3",
         "sequelize": "^6.37.5",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@jest/globals": "^29.2.0",
