--- a/template.yaml
+++ b/template.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
     node-hexagonal-architecture-archetype
@@ -54,17 +54,17 @@ Resources:
         Properties:
             ResourceGroupName:
                 Ref: ApplicationResourceGroup
-            AutoConfigurationEnabled: 'true'
+            AutoConfigurationEnabled: "true"
 Outputs:
     # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
     # Find out more about other implicit resources you can reference within SAM
     # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
     HelloWorldApi:
         Description: API Gateway endpoint URL for Prod stage for Hello World function
-        Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/'
+        Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/products/"
     HelloWorldFunction:
         Description: Hello World Lambda Function ARN
-        Value: !GetAtt HelloWorldFunction.Arn
+        Value: !GetAtt ProductsFunction.Arn
     HelloWorldFunctionIamRole:
         Description: Implicit IAM Role created for Hello World function
-        Value: !GetAtt HelloWorldFunctionRole.Arn
+        Value: !GetAtt ProductsFunctionRole.Arn
