--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
         "@aws-lambda-powertools/metrics": "^2.9.0",
         "@aws-lambda-powertools/tracer": "^2.9.0",
         "@prisma/client": "^5.21.1",
+        "aws-serverless-express": "^3.4.0",
         "esbuild": "^0.14.54",
+        "express": "^4.21.2",
         "mysql2": "^3.11.3",
+        "pg": "^8.13.3",
+        "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.5",
         "uuid": "^10.0.0",
         "zod": "^3.23.8"
@@ -25,8 +29,11 @@
     "devDependencies": {
         "@jest/globals": "^29.2.0",
         "@types/aws-lambda": "^8.10.92",
+        "@types/aws-serverless-express": "^3.3.10",
+        "@types/express": "^5.0.0",
         "@types/jest": "^29.2.0",
         "@types/node": "^20.5.7",
+        "@types/sequelize": "^4.28.20",
         "jest": "^29.2.1",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
