feat: routes, envs & repositories queries

--- a/.gitignore
+++ b/.gitignore
@@ -208,4 +208,7 @@ $RECYCLE.BIN/
 # Jetbrains products
 .idea
 
+# Envs
+env.json
+
 # End of https://www.toptal.com/developers/gitignore/api/osx,node,linux,windows,sam
