--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/express": "^5.0.0",
         "@types/jest": "^29.2.0",
         "@types/node": "^20.5.7",
+        "@types/pg": "^8.11.11",
         "@types/sequelize": "^4.28.20",
         "jest": "^29.2.1",
         "ts-jest": "^29.0.5",
