--- a/template.yaml
+++ b/template.yaml
@@ -38,7 +38,7 @@ Resources:
                 GetApi:
                     Type: Api
                     Properties:
-                        Path: /products
+                        Path: /products/{id}
                         Method: GET
 
     # Function for POST Products
