--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "pg": "^8.13.3",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.37.5",
+        "sqlite3": "^5.1.7",
         "uuid": "^10.0.0",
         "zod": "^3.23.8"
     },
@@ -35,6 +36,7 @@
         "@types/node": "^20.5.7",
         "@types/pg": "^8.11.11",
         "@types/sequelize": "^4.28.20",
+        "@types/sqlite3": "^3.1.11",
         "jest": "^29.2.1",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
