--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@aws-lambda-powertools/logger": "^2.9.0",
         "@aws-lambda-powertools/metrics": "^2.9.0",
+        "@aws-lambda-powertools/parser": "^2.16.0",
         "@aws-lambda-powertools/tracer": "^2.9.0",
         "@prisma/client": "^5.21.1",
         "aws-serverless-express": "^3.4.0",
