--- a/package.json
+++ b/package.json
@@ -1,51 +1,57 @@
 {
-    "name": "node_archetype_aws_sam",
-    "version": "1.0.0",
-    "description": "hello world sample for NodeJS",
-    "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
-    "author": "SAM CLI",
-    "license": "MIT",
-    "scripts": {
-        "unit": "jest --coverage",
-        "lint": "ts-standard --fix",
-        "compile": "tsc",
-        "test": "npm run compile && npm run unit"
-    },
-    "dependencies": {
-        "@aws-lambda-powertools/logger": "^2.16.0",
-        "@aws-lambda-powertools/metrics": "^2.16.0",
-        "@aws-lambda-powertools/parser": "^2.16.0",
-        "@aws-lambda-powertools/tracer": "^2.16.0",
-        "esbuild": "^0.14.54",
-        "mysql2": "^3.11.3",
-        "pg": "^8.13.3",
-        "pg-hstore": "^2.3.4",
-        "sequelize": "^6.37.5",
-        "sqlite3": "^5.1.7",
-        "uuid": "^10.0.0",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@jest/globals": "^29.2.0",
-        "@types/aws-lambda": "^8.10.147",
-        "@types/jest": "^29.2.0",
-        "@types/node": "^20.5.7",
-        "@types/pg": "^8.11.11",
-        "@types/sequelize": "^4.28.20",
-        "@types/sqlite3": "^3.1.11",
-        "jest": "^29.2.1",
-        "ts-jest": "^29.0.5",
-        "ts-node": "^10.9.1",
-        "ts-standard": "^12.0.2",
-        "typescript": "^4.8.4"
-    },
-    "ts-standard": {
-        "project": "./tsconfig.json",
-        "ignore": [
-            "dist/",
-            "app/**/test/*.ts",
-            "node_modules",
-            "coverage"
-        ]
-    }
+  "name": "node_archetype_aws_sam",
+  "version": "1.0.0",
+  "description": "hello world sample for NodeJS",
+  "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
+  "author": "SAM CLI",
+  "license": "MIT",
+  "scripts": {
+    "unit": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier . --write",
+    "compile": "tsc",
+    "test": "npm run compile && npm run unit"
+  },
+  "dependencies": {
+    "@aws-lambda-powertools/logger": "^2.16.0",
+    "@aws-lambda-powertools/metrics": "^2.16.0",
+    "@aws-lambda-powertools/parser": "^2.16.0",
+    "@aws-lambda-powertools/tracer": "^2.16.0",
+    "esbuild": "^0.14.54",
+    "mysql2": "^3.11.3",
+    "pg": "^8.13.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.2.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.1",
+    "@jest/globals": "^29.2.0",
+    "@types/aws-lambda": "^8.10.147",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^20.5.7",
+    "@types/pg": "^8.11.11",
+    "@types/sequelize": "^4.28.20",
+    "@types/sqlite3": "^3.1.11",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "jest": "^29.2.1",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.4.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  }
 }
