--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node_archetype_aws_sam",
   "version": "1.0.0",
   "description": "hello world sample for NodeJS",
-  "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "author": "SAM CLI",
   "license": "MIT",
+  "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
   "scripts": {
     "unit": "jest --coverage",
     "lint": "eslint .",
@@ -14,22 +14,24 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
-    "esbuild": "^0.14.54",
-    "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "esbuild": "0.25.4",
+    "loggerfy": "1.1.4",
+    "safe-json-stringify": "1.2.0",
+    "uuid": "10.0.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.1.0",
-    "@jest/globals": "^29.2.0",
-    "@types/aws-lambda": "^8.10.147",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^20.5.7",
-    "@typescript-eslint/parser": "^8.31.1",
-    "eslint": "^9.32.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "jest": "^29.2.1",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "@antfu/eslint-config": "5.1.0",
+    "@jest/globals": "29.2.0",
+    "@types/aws-lambda": "8.10.147",
+    "@types/jest": "29.2.0",
+    "@types/node": "20.5.7",
+    "@types/safe-json-stringify": "1.1.5",
+    "eslint": "9.32.0",
+    "eslint-plugin-format": "^1.0.1",
+    "jest": "29.2.1",
+    "ts-jest": "29.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4"
   }
 }
