--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "node_archetype_aws_sam",
-  "version": "1.0.0",
-  "description": "hello world sample for NodeJS",
-  "author": "SAM CLI",
-  "license": "MIT",
-  "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
-  "scripts": {
-    "unit": "jest --coverage",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier . --write",
-    "compile": "tsc",
-    "test": "npm run compile && npm run unit"
-  },
-  "dependencies": {
-    "esbuild": "0.25.4",
-    "loggerfy": "1.1.4",
-    "safe-json-stringify": "1.2.0",
-    "uuid": "10.0.0",
-    "zod": "3.23.8"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "5.1.0",
-    "@jest/globals": "29.2.0",
-    "@types/jest": "29.2.0",
-    "@types/node": "20.5.7",
-    "@types/safe-json-stringify": "1.1.5",
-    "eslint": "9.32.0",
-    "eslint-plugin-format": "1.0.1",
-    "jest": "29.2.1",
-    "ts-jest": "29.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "4.8.4"
-  }
+    "name": "node_archetype_aws_sam",
+    "version": "1.0.0",
+    "description": "hello world sample for NodeJS",
+    "author": "SAM CLI",
+    "license": "MIT",
+    "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
+    "scripts": {
+        "test": "jest --coverage",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "compile": "tsc"
+    },
+    "dependencies": {
+        "esbuild": "0.25.4",
+        "pino": "9.5.0",
+        "safe-json-stringify": "1.2.0",
+        "uuid": "10.0.0",
+        "zod": "3.23.8"
+    },
+    "devDependencies": {
+        "@antfu/eslint-config": "5.1.0",
+        "@jest/globals": "29.2.0",
+        "@types/aws-lambda": "8.10.158",
+        "@types/jest": "29.2.0",
+        "@types/node": "20.5.7",
+        "@types/safe-json-stringify": "1.1.5",
+        "aws-lambda": "1.0.7",
+        "eslint": "9.32.0",
+        "eslint-plugin-format": "1.0.1",
+        "jest": "29.2.1",
+        "ts-jest": "29.0.5",
+        "ts-node": "10.9.1",
+        "typescript": "4.8.4"
+    }
 }
