--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "include": [
         "app.ts",
         "app/**/*.ts",
-        "**/*.test.ts",
+        "tests/**/*.test.ts",
         "jest.config.ts",
         "eslint.config.mjs"
     ],
